--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
   "name": "turgo-test",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "@types/jest": "^26.0.13",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "@types/express": "github:types/express",
     "@types/node": "^14.10.1",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "cra-template": "1.0.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "@types/node-fetch": "^2.5.7",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "frontend": "cd frontend && npm start",
+    "server": "tsc && node ./dist/server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn frontend\""
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Oliii/turgotest.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Oliii/turgotest/issues"
+  },
+  "homepage": "https://github.com/Oliii/turgotest#readme"
 }
